tests/snapshots/ir_snapshots__qft_4_ibmq.snap
---
source: tests/ir_snapshots.rs
expression: lowered_str
---
BackendCircuit {
    backend: IbmQ,
    num_qubits: 4,
    num_clbits: 0,
    gates: [
        Rz(
            0,
            1.570796326794,
        ),
        Rot(
            0,
            1.570796326794,
        ),
        Rz(
            0,
            2.356194490192,
        ),
        Cx(
            1,
            0,
        ),
        Rz(
            0,
            -0.785398163397,
        ),
        Cx(
            1,
            0,
        ),
        Rz(
            1,
            2.356194490192,
        ),
        Rot(
            1,
            1.570796326794,
        ),
        Rz(
            1,
            1.570796326794,
        ),
        Cx(
            2,
            1,
        ),
        Cx(
            1,
            2,
        ),
        Cx(
            2,
            1,
        ),
        Rz(
            0,
            0.392699081698,
        ),
        Cx(
            1,
            0,
        ),
        Rz(
            0,
            -0.392699081698,
        ),
        Cx(
            1,
            0,
        ),
        Rz(
            2,
            0.785398163397,
        ),
        Cx(
            1,
            2,
        ),
        Rz(
            2,
            -0.785398163397,
        ),
        Cx(
            1,
            2,
        ),
        Cx(
            3,
            2,
        ),
        Cx(
            2,
            3,
        ),
        Cx(
            3,
            2,
        ),
        Rz(
            1,
            2.748893571891,
        ),
        Rot(
            1,
            1.570796326794,
        ),
        Rz(
            1,
            1.570796326794,
        ),
        Cx(
            2,
            1,
        ),
        Cx(
            1,
            2,
        ),
        Cx(
            2,
            1,
        ),
        Rz(
            0,
            0.196349540849,
        ),
        Cx(
            1,
            0,
        ),
        Rz(
            0,
            -0.196349540849,
        ),
        Cx(
            1,
            0,
        ),
        Cx(
            1,
            2,
        ),
        Rz(
            1,
            0.196349540849,
        ),
        Cx(
            2,
            1,
        ),
        Cx(
            1,
            2,
        ),
        Rz(
            3,
            0.392699081698,
        ),
        Cx(
            2,
            3,
        ),
        Rz(
            3,
            -0.392699081698,
        ),
        Cx(
            2,
            3,
        ),
        Rz(
            1,
            0.785398163397,
        ),
        Cx(
            2,
            1,
        ),
        Rz(
            1,
            -0.785398163397,
        ),
        Cx(
            2,
            1,
        ),
        Rz(
            2,
            2.748893571891,
        ),
        Rot(
            2,
            1.570796326794,
        ),
        Rz(
            2,
            1.570796326794,
        ),
        Cx(
            3,
            2,
        ),
        Cx(
            2,
            3,
        ),
        Cx(
            3,
            2,
        ),
        Cx(
            2,
            1,
        ),
        Cx(
            1,
            2,
        ),
        Cx(
            2,
            1,
        ),
    ],
}
