tests/snapshots/ir_snapshots__qft_4_native_optimized.snap
---
source: tests/ir_snapshots.rs
expression: native_opt_str
---
NativeCircuit {
    num_qubits: 4,
    num_clbits: 0,
    gates: [
        Rz(
            0,
            3.141592653589,
        ),
        Ry(
            0,
            1.570796326794,
        ),
        Rz(
            1,
            0.785398163397,
        ),
        Rz(
            0,
            0.785398163397,
        ),
        Rzz(
            1,
            0,
            -0.785398163397,
        ),
        Rz(
            1,
            3.141592653589,
        ),
        Ry(
            1,
            1.570796326794,
        ),
        Rz(
            2,
            0.392699081698,
        ),
        Rz(
            0,
            0.392699081698,
        ),
        Rzz(
            2,
            0,
            -0.392699081698,
        ),
        Rz(
            2,
            0.785398163397,
        ),
        Rz(
            1,
            0.785398163397,
        ),
        Rzz(
            2,
            1,
            -0.785398163397,
        ),
        Rz(
            2,
            3.141592653589,
        ),
        Ry(
            2,
            1.570796326794,
        ),
        Rz(
            3,
            0.196349540849,
        ),
        Rz(
            0,
            0.196349540849,
        ),
        Rzz(
            3,
            0,
            -0.196349540849,
        ),
        Rz(
            3,
            0.392699081698,
        ),
        Rz(
            1,
            0.392699081698,
        ),
        Rzz(
            3,
            1,
            -0.392699081698,
        ),
        Rz(
            3,
            0.785398163397,
        ),
        Rz(
            2,
            0.785398163397,
        ),
        Rzz(
            3,
            2,
            -0.785398163397,
        ),
        Rz(
            3,
            3.141592653589,
        ),
        Ry(
            3,
            1.570796326794,
        ),
    ],
}
