tests/snapshots/ir_snapshots__qft_4_optimize_ir.snap
---
source: tests/ir_snapshots.rs
expression: ir_opt_str
---
Circuit {
    num_qubits: 4,
    num_clbits: 0,
    gates: [
        H(
            0,
        ),
        Cp(
            1,
            0,
            1.570796326794,
        ),
        H(
            1,
        ),
        Cp(
            2,
            0,
            0.785398163397,
        ),
        Cp(
            2,
            1,
            1.570796326794,
        ),
        H(
            2,
        ),
        Cp(
            3,
            0,
            0.392699081698,
        ),
        Cp(
            3,
            1,
            0.785398163397,
        ),
        Cp(
            3,
            2,
            1.570796326794,
        ),
        H(
            3,
        ),
    ],
}
