tests/snapshots/ir_snapshots__qft_4_rigetti.snap
---
source: tests/ir_snapshots.rs
expression: lowered_str
---
BackendCircuit {
    backend: Rigetti,
    num_qubits: 4,
    num_clbits: 0,
    gates: [
        Rot(
            0,
            0.785398163397,
        ),
        Cz(
            1,
            0,
        ),
        Rz(
            0,
            3.141592653589,
        ),
        Rot(
            0,
            0.785398163397,
        ),
        Cz(
            1,
            0,
        ),
        Cz(
            2,
            1,
        ),
        Rz(
            1,
            2.356194490192,
        ),
        Rot(
            1,
            1.570796326794,
        ),
        Rz(
            2,
            1.570796326794,
        ),
        Rot(
            2,
            1.570796326794,
        ),
        Cz(
            1,
            2,
        ),
        Rz(
            2,
            3.141592653589,
        ),
        Rot(
            2,
            1.570796326794,
        ),
        Rz(
            1,
            3.141592653589,
        ),
        Rot(
            1,
            1.570796326794,
        ),
        Cz(
            2,
            1,
        ),
        Rz(
            1,
            3.141592653589,
        ),
        Rot(
            1,
            1.570796326794,
        ),
        Rz(
            0,
            3.141592653589,
        ),
        Rot(
            0,
            0.392699081698,
        ),
        Cz(
            1,
            0,
        ),
        Rz(
            0,
            3.141592653589,
        ),
        Rot(
            0,
            0.392699081698,
        ),
        Cz(
            1,
            0,
        ),
        Rz(
            2,
            -2.356194490192,
        ),
        Rot(
            2,
            1.570796326794,
        ),
        Cz(
            1,
            2,
        ),
        Rz(
            2,
            -1.570796326794,
        ),
        Rot(
            2,
            0.785398163397,
        ),
        Cz(
            1,
            2,
        ),
        Rz(
            0,
            3.141592653589,
        ),
        Rot(
            0,
            0.196349540849,
        ),
        Cz(
            3,
            0,
        ),
        Rz(
            0,
            3.141592653589,
        ),
        Rot(
            0,
            0.196349540849,
        ),
        Cz(
            3,
            0,
        ),
        Rz(
            2,
            3.141592653589,
        ),
        Rot(
            2,
            0.392699081698,
        ),
        Cz(
            3,
            2,
        ),
        Rz(
            2,
            3.141592653589,
        ),
        Rot(
            2,
            0.392699081698,
        ),
        Cz(
            3,
            2,
        ),
        Cz(
            3,
            0,
        ),
        Rz(
            0,
            -1.570796326794,
        ),
        Rot(
            0,
            1.570796326794,
        ),
        Rz(
            3,
            2.159844949342,
        ),
        Rot(
            3,
            1.570796326794,
        ),
        Cz(
            0,
            3,
        ),
        Rz(
            3,
            3.141592653589,
        ),
        Rot(
            3,
            1.570796326794,
        ),
        Rz(
            0,
            3.141592653589,
        ),
        Rot(
            0,
            1.570796326794,
        ),
        Cz(
            3,
            0,
        ),
        Rz(
            0,
            3.141592653589,
        ),
        Rot(
            0,
            1.570796326794,
        ),
        Rz(
            1,
            2.748893571891,
        ),
        Rot(
            1,
            0.785398163397,
        ),
        Cz(
            0,
            1,
        ),
        Rz(
            1,
            3.141592653589,
        ),
        Rot(
            1,
            0.785398163397,
        ),
        Cz(
            0,
            1,
        ),
        Rz(
            1,
            -1.570796326794,
        ),
        Rot(
            1,
            1.570796326794,
        ),
        Cz(
            1,
            2,
        ),
        Rz(
            2,
            -1.570796326794,
        ),
        Rot(
            2,
            1.570796326794,
        ),
        Rz(
            1,
            3.141592653589,
        ),
        Rot(
            1,
            1.570796326794,
        ),
        Cz(
            2,
            1,
        ),
        Rz(
            1,
            3.141592653589,
        ),
        Rot(
            1,
            1.570796326794,
        ),
        Rz(
            2,
            3.141592653589,
        ),
        Rot(
            2,
            1.570796326794,
        ),
        Cz(
            1,
            2,
        ),
        Cz(
            3,
            0,
        ),
        Rz(
            0,
            -2.356194490192,
        ),
        Rot(
            0,
            1.570796326794,
        ),
        Rz(
            3,
            3.141592653589,
        ),
        Rot(
            3,
            1.570796326794,
        ),
        Cz(
            0,
            3,
        ),
        Rz(
            3,
            3.141592653589,
        ),
        Rot(
            3,
            1.570796326794,
        ),
        Rz(
            0,
            3.141592653589,
        ),
        Rot(
            0,
            1.570796326794,
        ),
        Cz(
            3,
            0,
        ),
        Rz(
            0,
            3.141592653589,
        ),
        Rot(
            0,
            1.570796326794,
        ),
        Rz(
            2,
            3.141592653589,
        ),
        Rot(
            2,
            1.570796326794,
        ),
        Rz(
            0,
            1.570796326794,
        ),
        Rz(
            1,
            1.570796326794,
        ),
        Rz(
            2,
            1.570796326794,
        ),
        Rz(
            3,
            1.570796326794,
        ),
    ],
}
