tests/snapshots/ir_snapshots__qft_4_source.snap
---
source: tests/ir_snapshots.rs
expression: source_str
---
Circuit {
    num_qubits: 4,
    num_clbits: 0,
    gates: [
        H(
            0,
        ),
        Cp(
            1,
            0,
            1.570796326794,
        ),
        Cp(
            2,
            0,
            0.785398163397,
        ),
        Cp(
            3,
            0,
            0.392699081698,
        ),
        H(
            1,
        ),
        Cp(
            2,
            1,
            1.570796326794,
        ),
        Cp(
            3,
            1,
            0.785398163397,
        ),
        H(
            2,
        ),
        Cp(
            3,
            2,
            1.570796326794,
        ),
        H(
            3,
        ),
    ],
}
