tests/snapshots/ir_snapshots__qft_4_trapped_ion.snap
---
source: tests/ir_snapshots.rs
expression: lowered
---
BackendCircuit {
    backend: TrappedIon,
    num_qubits: 4,
    num_clbits: 0,
    gates: [
        Rz(
            0,
            3.141592653589793,
        ),
        Rot(
            0,
            1.5707963267948966,
        ),
        Rzz(
            1,
            0,
            -0.7853981633974483,
        ),
        Rz(
            1,
            -2.356194490192345,
        ),
        Rot(
            1,
            1.5707963267948966,
        ),
        Rzz(
            2,
            0,
            -0.39269908169872414,
        ),
        Rzz(
            2,
            1,
            -0.7853981633974483,
        ),
        Rz(
            2,
            -1.9634954084936211,
        ),
        Rot(
            2,
            1.5707963267948966,
        ),
        Rzz(
            3,
            0,
            -0.19634954084936207,
        ),
        Rzz(
            3,
            1,
            -0.39269908169872414,
        ),
        Rzz(
            3,
            2,
            -0.7853981633974483,
        ),
        Rz(
            3,
            -1.7671458676442588,
        ),
        Rot(
            3,
            1.5707963267948966,
        ),
        Rz(
            0,
            1.3744467859455345,
        ),
        Rz(
            1,
            1.1780972450961724,
        ),
        Rz(
            2,
            0.7853981633974483,
        ),
    ],
}
